hphp/hack/test/typecheck/array_get_generic_lvalue_array_get.php.exp
File "array_get_generic_lvalue_array_get.php", line 6, characters 18-37:
Some type constraint(s) here are violated (Typing[4323])
  File "hackarray.hhi", line 23, characters 28-29:
  `Tk` is a constrained type parameter
  File "hackarray.hhi", line 23, characters 34-41:
  Expected `arraykey`
  File "array_get_generic_lvalue_array_get.php", line 6, characters 25-29:
  But got `mixed`
File "array_get_generic_lvalue_array_get.php", line 8, characters 10-11:
Invalid return type (Typing[4110])
  File "array_get_generic_lvalue_array_get.php", line 6, characters 48-49:
  Expected `Tv`
  File "array_get_generic_lvalue_array_get.php", line 6, characters 18-37:
  But got `dict<mixed, mixed>`
